* fixed file browser scroll height issue * fixed too much padding to body on login page * incremented version number

--- a/bookface_dark.css
+++ b/bookface_dark.css
@@ -1,8 +1,8 @@
 /*
     Name	 : Bookface Dark
-    Version    : 1.3
+    Version    : 1.4
     Licence    : AGPL
-    Created on : 11 Feb 2025
+    Created on : 12 Feb 2025
     Author     : Pygoscelis Papua @randompenguin@friendica.world feb @feb@loma.ml Phil @phil@loma.ml
 */
 
@@ -892,7 +892,9 @@ aside .widget,
        border-color: transparent !important;
        background-color: transparent !important;
 }
-       
+ 	.fbrowser-content-container.justified-gallery {
+    	max-height: 100% !important;
+	}           
 #jot-title,
 #jot-category {
        background-color: rgb(51,51,52) !important;
@@ -2040,6 +2042,9 @@ a.tag.label,
 		}	
 }
 /* LOGIN AND INFO SCREENS */
+body.mod-home {
+	padding-top: 10px !important;
+}
 .mod-home .navbar,
 .mod-home #topbar-second{
 	background-color: transparent !important;
